Search form UI complete. TODO: add form functionality, resolve z-index issue with responsive wrapper.

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,5 @@
 
 body {
     font-family: Kumbh Sans, sans-serif;
+    font-size: 16px;
 }
